[+] Version 1.0: Add all basic functionalities
This version has operators and math-functions as separate classes.
operators: add, subtract, multiply, divide
math-unctions: equal, square, root, negative, decimal, percent, clear

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id = "page", class = "flex-container">
-      <div id = "header">Help</div>
+      <div id = "header">Made by AJ Cabreros</div>
 
       <div id = "center-page", class = "flex-container">
 
@@ -16,17 +16,18 @@
 
         <div id = "calculator">
           <div id = "screen", class = "flex-container">
-              <div id = "value"></div>
+              <div></div>
+              <div id = "display"></div>
             </div>
           <div id = "space", class = "flex-container"></div>
           <div id = "layout", class = "flex-container">
             <div id = "left", class = "flex-container">
-              <button class = "function">x²</button>
-              <button class = "function">√</button>
-              <button class = "function">%</button>
-              <button class = "function big-button">AC</button>
+              <button class = "math-function">x²</button>
+              <button class = "math-function">√</button>
+              <button class = "math-function">%</button>
+              <button id = "hard-reset", class = "math-function">AC</button>
             </div>
-            <div id ="middle", class = "flex-container">
+            <div id ="middle" class = "flex-container">
               <div class = "flex-container">
                 <button class = "number">7</button>
                 <button class = "number">8</button>
@@ -44,18 +45,18 @@
               </div>
               <div class = "flex-container">
                 <button class = "number">0</button>
-                <button class = "function">.</button>
-                <button class = "function">+/−</button>
+                <button class = "math-function">.</button>
+                <button class = "math-function">+/−</button>
               </div>
               <div class = "flex-container">
-                <button class = "number">=</button>
+                <button id = "equal", class = "math-function">=</button>
               </div>
             </div>
             <div id = "right", class = "flex-container">
               <button class = "operator">÷</button>
               <button class = "operator">×</button>
               <button class = "operator">−</button>
-              <button class = "operator big-button">+</button>
+              <button id = "addition", class = "operator">+</button>
             </div>
           </div>
 
@@ -64,7 +65,7 @@
         <div></div>
 
       </div>
-      <div id = "footer">ME</div>
+      <div id = "footer"></div>
     </div>
 
 
