[+] Ver 1.1 Fix Flexbox for nicer mobile experience
Removed static heights with pixel lengths for calculator container.
Heights and widths should only have percentages so hopefully mobile
experience is better.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
       <div id = "center-page", class = "flex-container">
 
-        <div></div>
+        <div class = "side"> </div>
 
         <div id = "calculator">
           <div id = "screen", class = "flex-container">
               <div></div>
               <div id = "display"></div>
             </div>
-          <div id = "space", class = "flex-container"></div>
+          <div id = "space"></div>
           <div id = "layout", class = "flex-container">
             <div id = "left", class = "flex-container">
               <button class = "math-function">x²</button>
@@ -62,7 +62,7 @@
 
         </div>
 
-        <div></div>
+        <div class = "side"> </div>
 
       </div>
       <div id = "footer"></div>
